# instructions

./: .gitignore  Cargo.toml  README.md
instructions-core/: Cargo.toml
instructions-core/src/: currying.rs  factory.rs  gate.rs  health_alt.rs  lib.rs  lifetime_stuff.rs  main.rs  patterns.rs  queuer.rs  ray_tracing.rs
instructions-core/src/data_structures/: graph.rs
instructions-core/src/puzzle/: deepest_leaves_sum.rs  event_ordering.rs  longest_common_prefix_trie.rs  minimum_index_sum_two_lists.rs  num_of_islands.rs  reverse_list.rs  s0048_rotate_image.rs  s0075_sort_colors.rs  s0539_minesweeper.rs  s0695_max_islands_area.rs  valid_sudoku.rs
instructions-core/src/sockets/: mod.rs
instructions-core/tests/: abstractions_test.rs  async_hrtb_test.rs  fan_in_fan_out_test.rs  patterns_test.rs  ray_tracing_test.rs  syracuse_test.rs
socket/: Cargo.toml
socket/src/: main.rs
src/: abstractions.rs  dictionary.rs  diy_stream.rs  gats.rs  health.rs  hrtb_generic.rs  lib.rs  lifetime_stuff.rs  line_writer.rs  main.rs  patterns.rs  plugin.rs  ray_tracing.rs
src/data_structures/: mod.rs  trie.rs
src/puzzle/: min_remove_to_make_valid.rs  mod.rs  rotate_arrays.rs  s0001_two_sum.rs  s0013_roman_to_integer.rs  s0014_longest_common_prefix.rs  s0017_letter_combination_phone_number.rs  s0020_valid_parentheses.rs
src/sockets/: udp_socket.rs
tests/: abstractions_test.rs  async_hrtb_test.rs  patterns_test.rs  ray_tracing_test.rs  reader.rs  syracuse_test.rs
