[package]
name = "instructions"
version = "0.1.0"
authors = ["lfordyce <leefordyce@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = "1.6.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

async-trait = "0.1.50"
chrono = { version = "0.4", features = ["serde"] }
rand  = "0.8.3"
num = "0.4"
num-traits = "0.2"
thiserror = "1.0"
derive_more = "0.99.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"