[package]
name = "instructions-core"
version = "0.1.0"
authors = ["lfordyce <leefordyce@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"

async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.3"
reqwest = { version = "0.12.4", features = ["json"] }
num = "0.4"
num-traits = "0.2"
thiserror = "1.0"
derive_more = "0.99.16"
url = { version = "2.2.2", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
